import React from 'react';
import {render} from '@testing-library/react';
import {ThemeProvider} from '@material-ui/core';
import {theme, Drawer, AuthContext, GroupContext} from '../../../lib';
import { GroupWithOwnerAndCars } from '../../api';
import { IUser } from '../../context';

it('renders and matches snapshot with open and ' +
    'not permanent without crashing', () => {
  const {baseElement} = render(
      <ThemeProvider theme={theme}>
        <Drawer open={true} onClose={jest.fn} permanent={false}/>
      </ThemeProvider>,
  );

  expect(baseElement).toMatchSnapshot();
});

it('renders and matches snapshot with open and ' +
    'permanent without crashing', () => {
  const {container} = render(
      <ThemeProvider theme={theme}>
        <Drawer open={true} onClose={jest.fn} permanent={true}/>
      </ThemeProvider>,
  );

  expect(container).toMatchSnapshot();
});

it('renders and matches snapshot with not open ' +
    'and permanent without crashing', () => {
  const {container} = render(
      <ThemeProvider theme={theme}>
        <Drawer open={false} onClose={jest.fn} permanent={true}/>
      </ThemeProvider>,
  );

  expect(container).toMatchSnapshot();
});

it('renders and matches snapshot with not open and ' +
    'not permanent without crashing', () => {
  const {baseElement} = render(
      <ThemeProvider theme={theme}>
        <Drawer open={false} onClose={jest.fn} permanent={false}/>
      </ThemeProvider>,
  );

  expect(baseElement).toMatchSnapshot();
});


it('renders NotLoggedIn component if user is not logged in', () => {
  const authContext = {
    isLoggedIn: false,
  } as AuthContext;

  const {baseElement} = render(
    <ThemeProvider theme={theme}>
      <AuthContext.Provider value={authContext}>
        <Drawer open={false} onClose={jest.fn} permanent={false}/>
      </AuthContext.Provider>
    </ThemeProvider>,
  );

  expect(baseElement).toMatchSnapshot();
});

describe('if user is logged in', () => {
  const customRender = (
    authContext: AuthContext,
    groupContext: GroupContext,
  ) => {
    return render(
        <ThemeProvider theme={theme}>
          <AuthContext.Provider value={authContext}>
            <GroupContext.Provider value={groupContext}>
              <Drawer open={false} onClose={jest.fn} permanent={true}/>
            </GroupContext.Provider>
          </AuthContext.Provider>
        </ThemeProvider>
    );
  };

  const user = {
    id: 10,
    username: 'USER',
  } as IUser;

  const groups = [
    {
      id: 1,
      name: 'Group',
      description: 'Test',
      ownerId: user.id,
      Owner: user,
    },
  ] as GroupWithOwnerAndCars[];

  it('renders create group button if user has no groups', () => {
    const authContext = {
      isLoggedIn: true,
    } as AuthContext;
    const groupContext = {
      groups: [],
    } as GroupContext;

    const {baseElement} = customRender(authContext, groupContext);

    expect(baseElement).toMatchSnapshot();
  });

  it('renders select group button if user has at least ' +
  'one group and none is selected', () => {
    const authContext = {
      isLoggedIn: true,
    } as AuthContext;
    const groupContext = {
      groups: [groups[0]],
      selectedGroup: null,
    } as GroupContext;

    const {baseElement} = customRender(authContext, groupContext);

    expect(baseElement).toMatchSnapshot();
  });
});
