// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and matches snapshot with not open and not permanent without crashing 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`renders and matches snapshot with not open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-430 makeStyles-drawerPermanent-432"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-431 makeStyles-drawerPaperPermanent-433 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiBox-root MuiBox-root-478 makeStyles-root-476"
      />
      <div
        class="MuiPaper-root makeStyles-footer-434 makeStyles-paper-479 MuiPaper-elevation6"
      >
        <div
          class="MuiContainer-root makeStyles-container-480 MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                privacyPolicy.title
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                imprint.title
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and matches snapshot with open and not permanent without crashing 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer-1"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-2 MuiDrawer-paperAnchorRight MuiPaper-elevation16"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root-51 makeStyles-root-49"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-closeButton-48"
          data-testid="close"
          id="drawer-close"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-footer-5 makeStyles-paper-73 MuiPaper-elevation6"
      >
        <div
          class="MuiContainer-root makeStyles-container-74 MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                privacyPolicy.title
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                imprint.title
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`renders and matches snapshot with open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-232 makeStyles-drawerPermanent-234"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-233 makeStyles-drawerPaperPermanent-235 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiBox-root MuiBox-root-280 makeStyles-root-278"
      />
      <div
        class="MuiPaper-root makeStyles-footer-236 makeStyles-paper-281 MuiPaper-elevation6"
      >
        <div
          class="MuiContainer-root makeStyles-container-282 MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                privacyPolicy.title
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                imprint.title
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
